Fix custom folder list in slideshow wallpaper config

REVIEW: 118180
BUG: 327580
FIXED-IN: 4.11.12